@@ -395,6 +395,7 @@ The full changelog is available at [changelog.txt](https://github.com/itthinx/af
 * Revised the traffic admin section to provide more detailed information on hits and enhanced its filter section.
 * Added a warning displayed in the Plugins section when the plugin is configured to delete its data.
 * Fixed an issue where a request for an invalid affiliate link would record a hit.
+* Added the filter affiliates_record_robot_hits and allowing the constant AFFILIATES_RECORD_ROBOT_HITS to determine whether hits from robots should be recorded.
 
 == Upgrade Notice ==
 
